# odin-ttipsu

./: README.md  pyproject.toml
src/ttipsu/: __init__.py  adapter.py  channel.py  controller.py  device.py  graph_adapter.py
test/config/: graph_config.json  psu_adapter.cfg
test/static/app/: package.json
test/static/app/public/: manifest.json
test/static/app/src/: App.js  Channel.jsx  Device.jsx  GraphChannel.jsx  GraphDevice.jsx  GraphPage.jsx  MainPage.jsx  MonitorGraph.jsx  OdinGraph.jsx
test/static/my-app/: package-lock.json
test/static/my-app/src/: Channel.jsx  Device.jsx  MainPage.jsx
